--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
             	</ul>
                 <ul class='nav navbar-nav navbar-right'>
                     {% if current_user.is_authenticated() %}
-                    <li>Hello {{ current_user.email }} <a href="{{ config.SECURITY_LOGOUT_URL }}">Logout</a></li>
+                    <li>Hello <a href="{{ url_for('user') }}"> {{ current_user.email }} </a><a href="{{ config.SECURITY_LOGOUT_URL }}">Logout</a></li>
                     {% else %}
                     <li><a href="{{ config.SECURITY_LOGIN_URL }}">Login</a></li>
                     {% endif %}
