--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 <h3>Welcome {{ email }}</h3>
-Your API key is: {{ key }}
-You have {{ free }} credits remaining (reset at 00:00 UTC)
-You have {{ paid }} credits remaining <button class=btn>Buy More</button>
+<p>Your API key is: {{ key }}</p>
+<p>You have {{ free }} credits remaining (reset at 00:00 UTC)</p>
+<p>You have {{ paid }} credits remaining <button class=btn>Buy More</button></p>
 {% endblock body %}
