Added a bit more context to the homepage.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% block body %}
-<h3>Recipes Made Simple</h3>
-<p>Using the yourdaily.menu api, you can find the recipes you need for your websites or app. Using a simple REST api, with lowcost, consistent pricing</p>
+<h3>What is db.yourdaily.menu?</h3>
+<p>db.yourdaily.menu is a collection of recipes that you can search. As of now you can search by the existence (or non-existence) of ingredients, or by a full text search that searches titles and directions.</p>
+
+<p>Recipes are returned with an id, allowing easier future lookup, along with ingredient list, directions, origins and other information.</p>
+
+<p>To learn how to use, <a href="/howto">click here</a></p>
 {% endblock body %}
