Reworded the fulltext search howto instrustions.

--- a/app/templates/howto.html
+++ b/app/templates/howto.html
@@ -10,7 +10,7 @@ There are 3 differnt types of requests you can make to get recipies back.
 
 <p>Any other recipe result also returns a recipe id, which can be used here to retreive an individual recipe.</p>
 
-<h4>Search by name</h4>
+<h4>Full text search</h4>
 
 <code>
 	https://db.yourdailymenu.org/api/v1/recipes
