Fixed typos in howto.

--- a/app/templates/howto.html
+++ b/app/templates/howto.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block body %}
 <h3>How to Use</h3>
-There are 3 differnt types of requests you can make to get recipies back.
+There are 3 different types of requests you can make to get recipes back.
 
 <h4>Search by id</h4>
 <code>
 	https://db.yourdailymenu.org/api/v1/recipes/id?key=yourkey
 </code>
 
-<p>Any other recipe result also returns a recipe id, which can be used here to retreive an individual recipe.</p>
+<p>Any other recipe result also returns a recipe id, which can be used here to retrieve an individual recipe.</p>
 
 <h4>Full text search</h4>
 
