Normalizing Data and creating a recipe editing page.

--- a/app/templates/edit_recipe.html
+++ b/app/templates/edit_recipe.html
@@ -1,21 +1,21 @@
-{% extends 'base/html' %}
+{% extends 'base.html' %}
 {% block body %}
-<h3>Name</h3><input type='text' name='recipe_name' value={{ recipe_name }}><br>
-<h3>Directions</h3><textarea name='directions'>{{ directions }}</textarea><br>
-<h3>Prep Time</h3><input type='text' name='prep_time' value={{ prep_time }}><br>
-<h3>Cook Time</h3><input type='text' name='cook_time' value={{ cook_time }}><br>
-<h3>Image URL</h3><input type='text' name='image' value={{ image }}><br>
-<h3>ID</h3><input type='text' name='recipe_id' value={{ recipe_id }}><br>
-<h3>Origin</h3><input type='text' name='credit' value={{ credit }}></br>
+<strong>ID</strong><input type='text' name='recipe_id' value={{ recipe.id }} readonly><br>
+<strong>Name</strong><input type='text' name='recipe_name' value={{ recipe.name }}><br>
+<strong>Directions</strong><textarea name='directions' rows='6' cols='50'>{{ recipe.directions }}</textarea><br>
+<strong>Prep Time</strong><input type='text' name='prep_time' value={{ recipe.prep_time }}><br>
+<strong>Cook Time</strong><input type='text' name='cook_time' value={{ recipe.cook_time }}><br>
+<strong>Image URL</strong><input type='text' name='image' value={{ recipe.image }}><br>
+<strong>Origin</strong><input type='text' name='credit' value={{ recipe.origin }}></br>
 
-{% for ing in ingredients %}
-	<hr>
-	<h3>Original</h3><textarea name='original'>{{ ing.original }}</textarea><br>
-	<h3>ID</h3><input type='text' name='id_{{ loop.index0 }}' value='{{ ing.id }}'><br>
-	<h3>Name</h3><input type='text' name='name_{{ loop.index0 }}' value='{{ ing.name }}'><br>
-	<h3>Unit</h3><input type='text' name='unit_{{ loop.index0 }}' value='{{ ing.unit }}'><br>
-	<h3>Amount</h3><input type='text' name='amount_{{ loop.index0 }}' value='{{ ing.amount }}'><br>
-	<h3>Modifiers</h3><input type='text' name='modifiers_{{ loop.index0 }}' value='{{ ing.modifiers }}'><br>
+{% for ing in recipe.ingredients %}
+	<h3>Ingredient</h3>
+	<strong>Original</strong><textarea name='original'>{{ ing.original }}</textarea><br>
+	<strong>ID</strong><input type='text' name='id_{{ loop.index0 }}' value='{{ ing.id }}'><br>
+	<strong>Name</strong><input type='text' name='name_{{ loop.index0 }}' value='{{ ing.name }}'><br>
+	<strong>Unit</strong><input type='text' name='unit_{{ loop.index0 }}' value='{{ ing.unit }}'><br>
+	<strong>Amount</strong><input type='text' name='amount_{{ loop.index0 }}' value='{{ ing.amount }}'><br>
+	<strong>Modifiers</strong><input type='text' name='modifiers_{{ loop.index0 }}' value='{{ ing.modifiers }}'><br>
 {% endfor %}
 
 {% endblock body %}
