--- a/app/templates/edit_recipe.html
+++ b/app/templates/edit_recipe.html
@@ -1,21 +1,38 @@
 {% extends 'base.html' %}
 {% block body %}
-<strong>ID</strong><input type='text' name='recipe_id' value={{ recipe.id }} readonly><br>
-<strong>Name</strong><input type='text' name='recipe_name' value={{ recipe.name }}><br>
-<strong>Directions</strong><textarea name='directions' rows='6' cols='50'>{{ recipe.directions }}</textarea><br>
-<strong>Prep Time</strong><input type='text' name='prep_time' value={{ recipe.prep_time }}><br>
-<strong>Cook Time</strong><input type='text' name='cook_time' value={{ recipe.cook_time }}><br>
-<strong>Image URL</strong><input type='text' name='image' value={{ recipe.image }}><br>
-<strong>Origin</strong><input type='text' name='credit' value={{ recipe.origin }}></br>
+<div class ='row'>
+	<div class='col-md-6'>
+		<form action='/recipe_edit/edit' method="post">
+			<strong>ID</strong><input type='text' name='recipe_id' value={{ recipe.id }} readonly><br>
+			<strong>Name</strong><input type='text' name='recipe_name' value={{ recipe.name }}><br>
+			<strong>Directions</strong><textarea name='directions' rows='6' cols='50'>{{ recipe.directions }}</textarea><br>
+			<strong>Prep Time</strong><input type='text' name='prep_time' value={{ recipe.prep_time }}><br>
+			<strong>Cook Time</strong><input type='text' name='cook_time' value={{ recipe.cook_time }}><br>
+			<strong>Image URL</strong><input type='text' name='image' value={{ recipe.image }}><br>
+			<strong>Origin</strong><input type='text' name='credit' value={{ recipe.origin }}></br>
 
-{% for ing in recipe.ingredients %}
-	<h3>Ingredient</h3>
-	<strong>Original</strong><textarea name='original'>{{ ing.original }}</textarea><br>
-	<strong>ID</strong><input type='text' name='id_{{ loop.index0 }}' value='{{ ing.id }}'><br>
-	<strong>Name</strong><input type='text' name='name_{{ loop.index0 }}' value='{{ ing.name }}'><br>
-	<strong>Unit</strong><input type='text' name='unit_{{ loop.index0 }}' value='{{ ing.unit }}'><br>
-	<strong>Amount</strong><input type='text' name='amount_{{ loop.index0 }}' value='{{ ing.amount }}'><br>
-	<strong>Modifiers</strong><input type='text' name='modifiers_{{ loop.index0 }}' value='{{ ing.modifiers }}'><br>
-{% endfor %}
+			{% for ing in recipe.ingredients %}
+				<h3>Ingredient</h3>
+				<strong>Original</strong><textarea name='original'>{{ ing.original }}</textarea><br>
+				<strong>ID</strong><input type='text' name='id_{{ loop.index0 }}' value='{{ ing.id }}'><br>
+				<strong>Name</strong><input type='text' name='name_{{ loop.index0 }}' value='{{ ing.name }}'><br>
+				<strong>Unit</strong><input type='text' name='unit_{{ loop.index0 }}' value='{{ ing.unit }}'><br>
+				<strong>Amount</strong><input type='text' name='amount_{{ loop.index0 }}' value='{{ ing.amount }}'><br>
+				<strong>Modifiers</strong><input type='text' name='modifiers_{{ loop.index0 }}' value='{{ ing.modifiers }}'><br>
+			{% endfor %}
+			<button type='submit'>Submit</button>
+		</form>
+	</div>
 
+	<div class='col-md-6'>
+	<h3>Add Ingredient</h3>
+	<form action='/recipe_edit/add_ingredient' method="post">
+		<strong>Name</strong><input type='text' name='name'><br>
+		<strong>Unit</strong><input type='text' name='unit'><br>
+		<strong>Amount</strong><input type='text' name='amount'><br>
+		<strong>Modifiers</strong><input type="text" name="modifiers">
+		<button type='submit'>Submit</button>
+	</form>
+	</div>
+</div>
 {% endblock body %}
