--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
             	<ul class='nav navbar-nav'>
             		<li><a href="{{ url_for('how_to_use') }}">How to Use</a></li>
             		<li><a href="{{ url_for('pricing') }}">Pricing</a></li>
-                    <li><a href="{{ url_for('user') }}">Account</a></li>
+                    <li><a href="{{ url_for('user_page') }}">Account</a></li>
             	</ul>
                 <ul class='nav navbar-nav navbar-right'>
                     {% if current_user.is_authenticated() %}
